[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/TrainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=2]

[node name="TrainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Panel" type="Panel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
margin_left = 252.0
margin_right = 742.0
margin_bottom = 582.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="XButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
margin_top = 197.0
margin_right = 490.0
margin_bottom = 235.0
text = "Wybierz plik z danymi wejściowymi"

[node name="YButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
margin_top = 247.0
margin_right = 490.0
margin_bottom = 285.0
text = "Wybierz plik z danymi wyjściowymi"

[node name="TrainButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
margin_top = 297.0
margin_right = 490.0
margin_bottom = 335.0
text = "Trenuj"

[node name="BackButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
margin_top = 347.0
margin_right = 490.0
margin_bottom = 385.0
text = "Wstecz"

[node name="XFile" type="FileDialog" parent="."]
margin_left = 38.0
margin_top = 45.0
margin_right = 989.0
margin_bottom = 563.0
window_title = "Otwórz plik"
mode = 0
access = 2
current_dir = "/Users/bolek/Documents/Godot/nn_race"
current_path = "/Users/bolek/Documents/Godot/nn_race/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YFile" type="FileDialog" parent="."]
margin_left = 40.063
margin_top = 36.5071
margin_right = 994.063
margin_bottom = 565.507
window_title = "Otwórz plik"
mode = 0
access = 2
current_dir = "/Users/bolek/Documents/Godot/nn_race"
current_path = "/Users/bolek/Documents/Godot/nn_race/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/XButton" to="." method="_on_XButton_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/YButton" to="." method="_on_YButton_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/TrainButton" to="." method="_on_TrainButton_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="file_selected" from="XFile" to="." method="_on_XFile_file_selected"]
[connection signal="file_selected" from="YFile" to="." method="_on_YFile_file_selected"]
